--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-<img src="imagenes/logoeafit.png" alt="Logo EAFIT" class="logo">
+<img src="logoeafit.png" alt="Logo EAFIT" class="logo">
 <h1>Calculadora de Promedio Ponderado</h1>
 </header>
  
